# Puzzle-Solver

./: .gitignore  .proj-aliases.sh  CMakeLists.txt  ClassDesign.uml
inc/: constraint.h  csp.h  propagator.h  solver.h  valueHeuristic.h  variable.h  variableHeuristic.h
inc/constraints/: noRepeatsConstraint.h
inc/heuristics/: minimumRemainingValuesHeuristic.h
src/: CMakeLists.txt  csp.cc  main.cc  solver.cc  variable.cc
src/constraints/: CMakeLists.txt  noRepeatsConstraint.cc
src/heuristics/: CMakeLists.txt  minimumRemainingValuesHeuristic.cc
test/: CMakeLists.txt
test/constraints/src/: noRepeatsConstraint_test.cc
test/csp_test/inc/: csp_test_helper.h
test/csp_test/src/: csp_test.cc
test/heuristics/src/: minimumRemainingValuesHeuristic_test.cc
test/solver_test/src/: solver_test.cc
test/variable_test/inc/: variable_test_helper.h
test/variable_test/src/: variable_test.cc
